--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
   <script src="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/yinghua.js"></script>
      <!--背景图片-->
      <!--网站统计代码-->
-     <script>
+<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?704c8c1293bccbfffaa9424357de237c";
+  hm.src = "https://hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+
 
 </head>
 <body background="https://www.helloimg.com/images/2022/01/31/G8z2F1.png">
@@ -38,20 +39,20 @@ var _hmt = _hmt || [];
     <span style="color: #7F7F7F;">通过这个页面可以跳转夜狼电子商务旗航下网站</span>
 
     <div class="language">
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//about/" rel="nofollow" target="_blank" >关于作者</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/zaijian/" rel="nofollow" target="_blank"  >网课代刷</a>
-    <a class="btn2 btn-outline2" href="http://124.222.6.169//blog/" rel="nofollow" target="_blank"  >博客</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/about/" rel="nofollow" target="_blank" >关于作者</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/zaijian/" rel="nofollow" target="_blank"  >网课代刷</a>
+    <a class="btn2 btn-outline2" href="http://124.222.6.169/blog/" rel="nofollow" target="_blank"  >博客</a>
      <a class="btn2 btn-outline2" href="http://gwzs.haotquan.com" rel="nofollow" target="_blank" >网购优惠券①</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//youhui/hdk" rel="nofollow" target="_blank" >网购优惠券②</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/youhui/hdk" rel="nofollow" target="_blank" >网购优惠券②</a>
      <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank" >网购优惠券③</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/blog/index.php/archives/4.html" rel="nofollow" target="_blank" >外卖内部券</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/dy/" rel="nofollow" target="_blank">1号影视</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/v/" rel="nofollow" target="_blank">VIP电影免费看</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/music/" rel="nofollow" target="_blank">VIP音乐免费下载</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/wenkufuzhi/" rel="nofollow" target="_blank">百度文库复制</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/bdwp/" rel="nofollow" target="_blank">百度网盘下载</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/yule/" rel="nofollow" target="_blank">娱乐系统</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169//vip/guanbi/" rel="nofollow" target="_blank">网课查题</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/dy/" rel="nofollow" target="_blank">1号影视</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/v/" rel="nofollow" target="_blank">VIP电影免费看</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/music/" rel="nofollow" target="_blank">VIP音乐免费下载</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/wenkufuzhi/" rel="nofollow" target="_blank">百度文库复制</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/bdwp/" rel="nofollow" target="_blank">百度网盘下载</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/yule/" rel="nofollow" target="_blank">娱乐系统</a>
+     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/guanbi/" rel="nofollow" target="_blank">网课查题</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169:5244/" rel="nofollow" target="_blank">凯撒云盘</a>
     </div>
 			
