--- a/index.html
+++ b/index.html
@@ -42,16 +42,13 @@ var _hmt = _hmt || [];
      <a class="btn2 btn-outline2" href="http://124.222.6.169/about/" rel="nofollow" target="_blank" >关于作者</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/zaijian/" rel="nofollow" target="_blank"  >网课代刷</a>
     <a class="btn2 btn-outline2" href="http://124.222.6.169/blog/" rel="nofollow" target="_blank"  >博客</a>
-     <a class="btn2 btn-outline2" href="http://gwzs.haotquan.com" rel="nofollow" target="_blank" >网购优惠券①</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169/youhui/hdk" rel="nofollow" target="_blank" >网购优惠券②</a>
-     <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank" >网购优惠券③</a>
+     <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank" >网购优惠券</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/blog/index.php/archives/4.html" rel="nofollow" target="_blank" >外卖内部券</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/dy/" rel="nofollow" target="_blank">1号影视</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/v/" rel="nofollow" target="_blank">VIP电影免费看</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/music/" rel="nofollow" target="_blank">VIP音乐免费下载</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/wenkufuzhi/" rel="nofollow" target="_blank">百度文库复制</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/bdwp/" rel="nofollow" target="_blank">百度网盘下载</a>
-     <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/yule/" rel="nofollow" target="_blank">娱乐系统</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/guanbi/" rel="nofollow" target="_blank">网课查题</a>
      <a class="btn2 btn-outline2" href="http://124.222.6.169:5244/" rel="nofollow" target="_blank">凯撒云盘</a>
     </div>
