--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>梦想启航</title>
+    <!--百度推送代码-->
+    <meta name="baidu-site-verification" content="code-VIknyrrAJW" />
+<title>夜狼电子商务</title>
+<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+  <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
+  <meta name="description" content="开发各种电子商务软件以及运营">
 <script>
     document.documentElement.className = "js";
     var supportsCssVars = function() {
