--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="zh" class="no-js">
 <head>
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
     <!--百度推送代码-->
     <meta name="baidu-site-verification" content="code-VIknyrrAJW" />
 <title>夜狼电子商务</title>
