--- a/index.html
+++ b/index.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
-<html lang="zh-cn" >
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
-<meta name="viewport" content="width=device-width,initial-scale=1">
- <head>
-    <title>夜狼电子商务</title>
+<html lang="en" class="no-js">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>夜狼电子商务</title>
 <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
   <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
+<!--百度统计-->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+<!--统计结束-->
 </head>
 <body>
-    <!--开始-->
-    <div class="contnt">
-        <header class="meng">夜狼电子商务团队主页</header>
-        <div class="messageDetails">
-            <div class="storeup">
-                <p>以下是夜狼团队开发的网站</p>
-            </div>
-            <div class="link">
-               <span>团队主页</span>
-            <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>  
-            </div>
-                    <div class="link">
+<!--开始-->
+<div class="contnt">
+    <header class="meng">夜狼电子商务团队主页</header>
+    <div class="messageDetails">
+        <div class="storeup">
+            <p>夜狼团队旗下网站入口</p>
+        </div>
+        <div class="link">
+            <span>团队主页</span>
+            <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>
+        </div>
+        <div class="link">
             <span>关于作者</span>
             <a href="javascript:location.assign('http://124.222.6.169/about/');">马上进入</a>
         </div>
@@ -49,13 +60,17 @@
             <span>vip音乐免费下载</span>
             <a href="javascript:location.assign('http://124.222.6.169/vip/music/');">马上进入</a>
         </div>
+        <div class="link">
+            <span>vip音乐免费看</span>
+            <a href="javascript:location.assign('http://124.222.6.169/vip/music/');">马上进入</a>
         </div>
-        <footer>
+    </div>
+    <footer>
         <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队</p>
     </footer>
-    </div>
-    <!--结束-->
-  <script src="js/style.js"></script>
-  <script src="js/vendors.js"></script>
+</div>
+<!--结束-->
+<div class="overlay"></div>
+
 </body>
 </html>
