--- a/dsw/index.html
+++ b/dsw/index.html
@@ -3,11 +3,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
 <meta name="viewport" content="width=device-width,initial-scale=1">
  <head>
-<title>夜狼电子商务</title>
+<title>夜狼电子商务商城入口</title>
 <link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
   <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
+  <!--fa图标-->
+  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
 <!--百度统计-->
 <script>
 var _hmt = _hmt || [];
@@ -26,43 +28,19 @@ var _hmt = _hmt || [];
         <header class="meng">夜狼电子商务团队主页</header>
         <div class="messageDetails">
             <div class="storeup">
-                <p>夜狼团队旗下网站入口</p>
+                <p>夜狼团队旗下商城入口</p>
             </div>
             <div class="link">
-               <span>团队主页</span>
+               <span>大学网课</span>
             <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>  
             </div>
                     <div class="link">
-            <span>关于作者</span>
+            <span>代刷网</span>
             <a href="javascript:location.assign('http://124.222.6.169/about/');">马上进入</a>
         </div>
         <div class="link">
-            <span>凯撒博客</span>
+            <span><i class="fa fa-qq"></i>Q Q</span>
             <a href="javascript:location.assign('http://124.222.6.169/blog/');">马上进入</a>
-        </div>
-        <div class="link">
-            <span>网购优惠券</span>
-            <a href="javascript:location.assign('http://ijhif.yhzu.cn/');">马上进入</a>
-        </div>
-        <div class="link">
-            <span>外卖内部卷</span>
-            <a href="javascript:location.assign('http://124.222.6.169/blog/index.php/archives/4.html');">马上进入</a>
-        </div>
-        <div class="link">
-            <span>1号影视</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/dy/');">马上进入</a>
-        </div>        
-        <div class="link">
-            <span>凯撒云盘</span>
-            <a href="javascript:location.assign('http://124.222.6.169:5244/');">马上进入</a>
-        </div>        
-        <div class="link">
-            <span>vip音乐免费下载</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/music/');">马上进入</a>
-        </div>
-        <div class="link">
-            <span>vip电影免费观看</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/v/');">马上进入</a>
         </div>
         </div>
         <footer>
