--- a/wk/index.html
+++ b/wk/index.html
@@ -32,14 +32,14 @@ var _hmt = _hmt || [];
             </div>
             <div class="link">
                <span>大学网课</span>
-            <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>  
+            <a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>  
             </div>
                     <div class="link">
-            <span>代刷网</span>
-            <a href="javascript:location.assign('http://124.222.6.169/about/');">马上进入</a>
+            <span>网课代理</span>
+            <a href="javascript:location.assign('http://124.222.6.169/wk2/');">马上进入</a>
         </div>
         <div class="link">
-            <span><i class="fa fa-qq"></i>Q Q</span>
+            <span><i class="fa fa-qq"></i> QQ</span>
             <a href="javascript:location.assign('http://124.222.6.169/blog/');">马上进入</a>
         </div>
         </div>
