--- a/wk/index.html
+++ b/wk/index.html
@@ -40,7 +40,7 @@ var _hmt = _hmt || [];
         </div>
         <div class="link">
             <span><i class="fa fa-qq"></i> QQ</span>
-            <a href="javascript:location.assign('http://124.222.6.169/blog/');">马上进入</a>
+            <a href="javascript:location.assign('https://wpa.qq.com/wpa_jump_page?v=3&uin=1290361724&site=qq&menu=yes');">马上进入</a>
         </div>
         </div>
         <footer>
