--- a/wk/index.html
+++ b/wk/index.html
@@ -43,6 +43,9 @@ var _hmt = _hmt || [];
             <a href="javascript:location.assign('https://wpa.qq.com/wpa_jump_page?v=3&uin=1290361724&site=qq&menu=yes');">马上进入</a>
         </div>
         </div>
+        <div class="messageDetails">
+            <img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" alt="ZIlA2D.jpg" border="0" />
+        </div>
         <footer>
         <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队</p>
     </footer>
