--- a/wk/index.html
+++ b/wk/index.html
@@ -31,12 +31,15 @@ var _hmt = _hmt || [];
                 <p>夜狼团队旗下商城入口</p>
             </div>
             <div class="link">
-               <span>大学网课</span>
+               <span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课1号入口</span>
             <a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>  
             </div>
-                    <div class="link">
-            <span>网课代理</span>
-            <a href="javascript:location.assign('http://124.222.6.169/wk2/');">马上进入</a>
+               <span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课2号入口</span>
+            <a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>  
+            </div>
+            <div class="link">
+            <span><i class="fa fa-search" aria-hidden="true"></i>售后补单</span>
+            <a href="javascript:location.assign('http://124.222.6.169/wk/chadan');">马上进入</a>
         </div>
         <div class="link">
             <span><i class="fa fa-qq"></i> QQ</span>
