--- a/wk/index.html
+++ b/wk/index.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
-<html lang="zh-cn" >
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 
+<html lang="zh-cn">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
- <head>
-<title>夜狼电子商务商城入口</title>
-<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-  <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
-  <meta name="description" content="开发各种电子商务软件以及运营">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
-  <!--fa图标-->
-  <link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
-<!--百度统计-->
-<script>
-var _hmt = _hmt || [];
+
+<head>
+	<title>夜狼电子商务商城入口</title>
+	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+	<meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
+	<meta name="description" content="开发各种电子商务软件以及运营">
+	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<!--fa图标-->
+	<link rel="stylesheet" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.css">
+	<!--百度统计-->
+	<script>
+		var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
   hm.src = "https://hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
-<!--统计技术-->
+
+	</script>
+	<!--统计技术-->
 </head>
+
 <body>
-    <!--开始-->
-    <div class="contnt">
-        <header class="meng">夜狼电子商务团队主页</header>
-        <div class="messageDetails">
-            <div class="storeup">
-                <p>夜狼团队旗下商城入口</p>
-            </div>
+	<!--开始-->
+	<div class="contnt">
+		<header class="meng">夜狼电子商务团队主页</header>
+		<div class="messageDetails">
+			<div class="storeup">
+				<p>夜狼团队旗下商城入口</p>
+			</div>
+			<div class="link">
+				<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课1号入口</span>
+				<a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>
+			</div>
             <div class="link">
-               <span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课1号入口</span>
-            <a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>  
-            </div>
-               <span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课2号入口</span>
-            <a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>  
-            </div>
-            <div class="link">
-            <span><i class="fa fa-search" aria-hidden="true"></i>售后补单</span>
-            <a href="javascript:location.assign('http://124.222.6.169/wk/chadan');">马上进入</a>
-        </div>
-        <div class="link">
-            <span><i class="fa fa-qq"></i> QQ</span>
-            <a href="javascript:location.assign('https://wpa.qq.com/wpa_jump_page?v=3&uin=1290361724&site=qq&menu=yes');">马上进入</a>
-        </div>
-        </div>
-        <div class="messageDetails">
-            <img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" alt="ZIlA2D.jpg" border="0" />
-        </div>
-        <footer>
-        <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队</p>
-    </footer>
-    </div>
-    <!--结束-->
+			<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课2号入口</span>
+			<a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>
+		</div>
+		<div class="link">
+			<span><i class="fa fa-search" aria-hidden="true"></i>售后补单</span>
+			<a href="javascript:location.assign('http://124.222.6.169/wk/chadan');">马上进入</a>
+		</div>
+		<div class="link">
+			<span><i class="fa fa-qq"></i> QQ</span>
+			<a href="javascript:location.assign('https://wpa.qq.com/wpa_jump_page?v=3&uin=1290361724&site=qq&menu=yes');">马上进入</a>
+		</div>
+	</div>
+	<div class="messageDetails">
+		<img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" alt="ZIlA2D.jpg" border="0" />
+	</div>
+	<footer>
+		<p>© 2019-
+			<script>
+				document.write(new Date().getFullYear())
+			</script>夜狼团队</p>
+	</footer>
+	</div>
+	<!--结束-->
 </body>
+
 </html>
