--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ var _hmt = _hmt || [];
                <span>团队主页</span>
             <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>  
             </div>
+            <div class="link">
+               <span>高校网课</span>
+            <a href="javascript:location.assign('./wk');">马上进入</a>  
+            </div>
                     <div class="link">
             <span>关于作者</span>
             <a href="javascript:location.assign('http://124.222.6.169/about/');">马上进入</a>
