--- a/wk/index.html
+++ b/wk/index.html
@@ -34,11 +34,11 @@
 				<p>夜狼团队旗下商城入口</p>
 			</div>
 			<div class="link">
-				<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课1号入口</span>
+				<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课1号</span>
 				<a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>
 			</div>
             <div class="link">
-			<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课2号入口</span>
+			<span><i class="fa fa-cart-plus" aria-hidden="true"></i>高校网课2号</span>
 			<a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>
 		</div>
 		<div class="link">
@@ -51,7 +51,9 @@
 		</div>
 	</div>
 	<div class="messageDetails">
+        <div class="storeup">
 		<img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" alt="ZIlA2D.jpg" border="0" />
+        </div>
 	</div>
 	<footer>
 		<p>© 2019-
