--- a/wk/index.html
+++ b/wk/index.html
@@ -52,7 +52,7 @@
 	</div>
 	<div class="messageDetails">
         <div class="storeup">
-		<img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" alt="ZIlA2D.jpg" border="0" />
+		<img src="https://www.helloimg.com/images/2022/09/13/ZIlA2D.md.jpg" width="304" border="0" />
         </div>
 	</div>
 	<footer>
