--- a/wk/index.html
+++ b/wk/index.html
@@ -38,8 +38,8 @@
 				<a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>
 			</div>
             <div class="link">
-			<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 高校网课2号</span>
-			<a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>
+			<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 代理系统入口</span>
+			<a href="javascript:location.assign('http://124.222.6.169/wk2/');">马上进入</a>
 		</div>
 		<div class="link">
 			<span><i class="fa fa-search" aria-hidden="true"></i> 售后补单</span>
