--- a/index.html
+++ b/index.html
@@ -30,43 +30,43 @@ var _hmt = _hmt || [];
             </div>
             <div class="link">
                <span>团队主页</span>
-            <a href="javascript:location.assign('http://124.222.6.169/');">马上进入</a>  
+            <a href="http://124.222.6.169/">马上进入</a>  
             </div>
             <div class="link">
                <span>高校网课</span>
-            <a href="javascript:location.assign('./wk');">马上进入</a>  
+            <a href="./wk">马上进入</a>  
             </div>
                     <div class="link">
             <span>关于作者</span>
-            <a href="javascript:location.assign('http://124.222.6.169/about/');">马上进入</a>
+            <a href="http://124.222.6.169/about/">马上进入</a>
         </div>
         <div class="link">
             <span>凯撒博客</span>
-            <a href="javascript:location.assign('http://124.222.6.169/blog/');">马上进入</a>
+            <a href="http://124.222.6.169/blog/">马上进入</a>
         </div>
         <div class="link">
             <span>网购优惠券</span>
-            <a href="javascript:location.assign('http://ijhif.yhzu.cn/');">马上进入</a>
+            <a href="http://ijhif.yhzu.cn/">马上进入</a>
         </div>
         <div class="link">
             <span>外卖内部卷</span>
-            <a href="javascript:location.assign('http://124.222.6.169/blog/index.php/archives/4.html');">马上进入</a>
+            <a href="http://124.222.6.169/blog/index.php/archives/4.html">马上进入</a>
         </div>
         <div class="link">
             <span>1号影视</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/dy/');">马上进入</a>
+            <a href="http://124.222.6.169/vip/dy/">马上进入</a>
         </div>        
         <div class="link">
             <span>凯撒云盘</span>
-            <a href="javascript:location.assign('http://124.222.6.169:5244/');">马上进入</a>
+            <a href="http://124.222.6.169:5244/">马上进入</a>
         </div>        
         <div class="link">
             <span>vip音乐免费下载</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/music/');">马上进入</a>
+            <a href="http://124.222.6.169/vip/music/">马上进入</a>
         </div>
         <div class="link">
             <span>vip电影免费观看</span>
-            <a href="javascript:location.assign('http://124.222.6.169/vip/v/');">马上进入</a>
+            <a href="http://124.222.6.169/vip/v/">马上进入</a>
         </div>
         </div>
         <footer>
