--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@ var _hmt = _hmt || [];
             <span>vip电影免费观看</span>
             <a href="http://124.222.6.169/vip/v/">马上进入</a>
         </div>
+        <div class="link">
+            <span>vip电影免费观看</span>
+            <a href="http://124.222.6.169/vip/wenku/">马上进入</a>
+        </div>
         </div>
         <footer>
         <p>© 2019-<script>document.write(new Date().getFullYear())</script>夜狼团队</p>
