--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ var _hmt = _hmt || [];
             <a href="http://124.222.6.169/vip/v/">马上进入</a>
         </div>
         <div class="link">
-            <span>vip电影免费观看</span>
+            <span>vip文库导出TXT</span>
             <a href="http://124.222.6.169/vip/wenku/">马上进入</a>
         </div>
         </div>
