--- a/wk/index.html
+++ b/wk/index.html
@@ -49,9 +49,14 @@
 			<span><i class="fa fa-search" aria-hidden="true"></i> 售后补单</span>
 			<a href="javascript:location.assign('http://124.222.6.169/wk/chadan');">马上进入</a>
 		</div>
+        </div>
 		<div class="link">
-			<span><i class="fa fa-qq"></i> QQ</span>
-			<a href="javascript:location.assign('https://wpa.qq.com/wpa_jump_page?v=3&uin=1290361724&site=qq&menu=yes');">马上进入</a>
+			<span><i class="fa fa-address-card-o" aria-hidden="true"></i>联系客服</span>
+			<a href="javascript:location.assign('../haoyou');">马上进入</a>
+		</div>
+		<div class="link">
+			<span><i class="fa fa-qq"></i>QQ通知群</span>
+			<a href="javascript:location.assign('https://jq.qq.com/?_wv=1027&k=8LQ7dDRY');">马上进入</a>
 		</div>
 	</div>
 	<div class="messageDetails">
