--- a/wk/index.html
+++ b/wk/index.html
@@ -51,7 +51,7 @@
 		</div>
         </div>
 		<div class="link">
-			<span><i class="fa fa-address-card-o" aria-hidden="true"></i>联系客服</span>
+			<span><i class="fa fa-address-card-o"></i>联系客服</span>
 			<a href="javascript:location.assign('../haoyou');">马上进入</a>
 		</div>
 		<div class="link">
