--- a/wk/index.html
+++ b/wk/index.html
@@ -49,9 +49,8 @@
 			<span><i class="fa fa-search" aria-hidden="true"></i> 售后补单</span>
 			<a href="javascript:location.assign('http://124.222.6.169/wk/chadan');">马上进入</a>
 		</div>
-        </div>
 		<div class="link">
-			<span><i class="fa fa-address-card-o"></i>联系客服</span>
+			<span><i class="fa fa-address-card-o" aria-hidden="true"></i>联系客服</span>
 			<a href="javascript:location.assign('../haoyou');">马上进入</a>
 		</div>
 		<div class="link">
