--- a/wk/index.html
+++ b/wk/index.html
@@ -71,6 +71,8 @@
 	</footer>
 	</div>
 	<!--结束-->
+   <!--网站统计-->
+   <script type="text/javascript" src="//js.users.51.la/21475245.js"></script>
 </body>
 
 </html>
