--- a/index.html
+++ b/index.html
@@ -78,5 +78,9 @@ var _hmt = _hmt || [];
     </footer>
     </div>
     <!--结束-->
+    <!--51啦统计-->
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+<script>LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})</script>
+<!---->
 </body>
 </html>
