--- a/waimai/index.html
+++ b/waimai/index.html
@@ -1,13 +1,14 @@
 
-<html lang="zh"><head>
+<html lang="zh">
+    <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="keywords" content="美团代金券,美团优惠券领取,美团礼券" />
         <link rel="icon" href="https://notecdn.yiban.io/cloud_res/270927927/imgs/21-1-5_06:57:57.932_49315.png">
-<script src="https://zge.312752.cn/wmphp/ios/jquery.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="https://zge.312752.cn/wmphp/ios/common.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>每日外卖红包-外卖红包</title>
-    <link rel="stylesheet" href="https://zge.312752.cn/wmphp/ios/index.css">
+    <link rel="stylesheet" href="./yangshi/index.css">
+    <!--左侧按钮代码-->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/kaysarbiz/texiao@main/youceanniu.css">
 
 <style type="text/css">
             .agl-hover {
@@ -63,14 +64,10 @@
             }
         </style>
       
-
-
-
-
-
+<body>
     <div class="wrapper">
         <div class="banner">
-            <img src="https://zge.312752.cn/wmphp/ios/head-title.jpg" width="100%">
+            <img src="./yangshi/head-title.jpg" width="100%">
         </div>
 
         <div class="nav">
@@ -78,7 +75,7 @@
 
                 <a href="https://m.tb.cn/h.USsxGgJ">
                     <dl>
-                        <dt><img src="https://zge.312752.cn/wmphp/ios/ios.png"></dt>
+                        <dt><img src="./yangshi/ios.png"></dt>
                         <dd>
                             <h3>饿了么红包</h3><small>翻倍红包</small>
                         </dd>
@@ -89,7 +86,7 @@
             <div class="nav-item android">
                 <a href="http://dpurl.cn/SRiIo8Yz">
                     <dl>
-                        <dt><img src="https://zge.312752.cn/wmphp/ios/android.png"></dt>
+                        <dt><img src="./yangshi/android.png"></dt>
                         <dd>
                             <h3>美团红包</h3><small>每日领取</small>
                         </dd>
@@ -150,7 +147,7 @@
             <div class="product-wrap single">
                 <a target="_blank" class="product" href="http://dpurl.cn/SRiIo8Yz">
                     <div class="cover">
-                        <img src="https://zge.312752.cn/wmphp/ios/index03.png">
+                        <img src="./yangshi/index03.png">
                     </div>
                     <div class="info">
                         <div class="tags">
@@ -184,6 +181,13 @@
           夜狼网络科技工作室@版权所有  </div>
 
 </div>
-
-
-</body></html>
+/*自定义按钮样式结束*/
+     <div class="ab">
+    <a class="fe" id="q" href="http://ijhif.yhzu.cn/" target="_self" >网购优惠</a> 
+    <a class="fe" id="w" href="https://s.click.taobao.com/6zpQcRu" target="_self" >淘宝优惠</a>
+    <a class="fe" id="u" href="https://p.pinduoduo.com/0sp6UI6p" target="_self" >多多9.9</a>
+    <a class="fe" id="r" href="http://124.222.6.169:5244/" target="_self" >凯撒云盘</a> 
+    <a class="fe" id="y" href="https://kaysarbiz.github.io/" target="_self" >团队主页</a> 
+    </div>
+</body>
+</html>
