--- a/wk/index.html
+++ b/wk/index.html
@@ -31,14 +31,14 @@
 		<header class="meng">夜狼电子商务团队主页</header>
 		<div class="messageDetails">
 			<div class="storeup">
-				<p>夜狼团队网课商城入口</p>
+				<p>夜狼团队批发商城入口</p>
 			</div>
 			<div class="link">
-				<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 高校网课1号</span>
+				<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 1号入口</span>
 				<a href="javascript:location.assign('http://124.222.6.169/wk');">马上进入</a>
 			</div>
             <div class="link">
-				<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 高校网课2号</span>
+				<span><i class="fa fa-cart-plus" aria-hidden="true"></i> 2号入口</span>
 				<a href="javascript:location.assign('http://124.222.6.169/wk/mini.php');">马上进入</a>
 			</div>
             <div class="link">
@@ -93,7 +93,7 @@
         var diffHours = Math.floor((diff-(diffYears*365+diffDays)*days)/hours);
         var diffMinutes = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours)/minutes);
         var diffSeconds = Math.floor((diff-(diffYears*365+diffDays)*days-diffHours*hours-diffMinutes*minutes)/seconds);
-        document.getElementById("sitetime").innerHTML=" 已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 "+diffSeconds+" 秒";
+        document.getElementById("sitetime").innerHTML=" 已运行"+diffYears+" 年 "+diffDays+" 天 "+diffHours+" 小时 "+diffMinutes+" 分钟 ";
     }
     siteTime();
 </script>
