--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
  <head>
 <title>夜狼电子商务</title>
-<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+<link rel="shortcut icon" href="https:/pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
   <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -13,7 +13,7 @@
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
+  hm.src = "https:/hm.baidu.com/hm.js?b6f9b038c49771807e863e0d10ddb494";
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
             </div>
             <div class="link">
                <span>团队主页</span>
-            <a href="http://124.222.6.169/">马上进入</a>  
+            <a href="http:/kaysar.top/">马上进入</a>  
             </div>
             <div class="link">
                <span>高校网课</span>
@@ -38,39 +38,39 @@ var _hmt = _hmt || [];
             </div>
                     <div class="link">
             <span>关于作者</span>
-            <a href="http://124.222.6.169/about/">马上进入</a>
+            <a href="http:/kaysar.top/about/">马上进入</a>
         </div>
         <div class="link">
             <span>凯撒博客</span>
-            <a href="http://124.222.6.169/blog/">马上进入</a>
+            <a href="http:/kaysar.top/blog/">马上进入</a>
         </div>
         <div class="link">
             <span>网购优惠券</span>
-            <a href="http://ijhif.yhzu.cn/">马上进入</a>
+            <a href="http:/ijhif.yhzu.cn/">马上进入</a>
         </div>
         <div class="link">
             <span>外卖内部卷</span>
-            <a href="http://124.222.6.169/blog/index.php/archives/4.html">马上进入</a>
+            <a href="http:/kaysar.top/blog/index.php/archives/4.html">马上进入</a>
         </div>
         <div class="link">
             <span>1号影视</span>
-            <a href="http://124.222.6.169/vip/dy/">马上进入</a>
+            <a href="http:/kaysar.top/vip/dy/">马上进入</a>
         </div>        
         <div class="link">
             <span>凯撒云盘</span>
-            <a href="http://124.222.6.169:5244/">马上进入</a>
+            <a href="http:/kaysar.top/:5244/">马上进入</a>
         </div>        
         <div class="link">
             <span>vip音乐免费下载</span>
-            <a href="http://124.222.6.169/vip/music/">马上进入</a>
+            <a href="http:/kaysar.top/vip/music/">马上进入</a>
         </div>
         <div class="link">
             <span>vip电影免费观看</span>
-            <a href="http://124.222.6.169/vip/v/">马上进入</a>
+            <a href="http:/kaysar.top/vip/v/">马上进入</a>
         </div>
         <div class="link">
             <span>vip文库导出TXT</span>
-            <a href="http://124.222.6.169/vip/wenku/">马上进入</a>
+            <a href="http:/kaysar.top/vip/wenku/">马上进入</a>
         </div>
         </div>
         <footer>
@@ -79,7 +79,7 @@ var _hmt = _hmt || [];
     </div>
     <!--结束-->
     <!--51啦统计-->
-    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script charset="UTF-8" id="LA_COLLECT" src="/sdk.51.la/js-sdk-pro.min.js"></script>
 <script>LA.init({id: "JrmyGwkGnhYMru7B",ck: "JrmyGwkGnhYMru7B"})</script>
 <!---->
 </body>
