--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ var _hmt = _hmt || [];
         </div>        
         <div class="link">
             <span>凯撒云盘</span>
-            <a href="http:/kaysar.top/:5244/">马上进入</a>
+            <a href="http:/disk.kaysar.top/">马上进入</a>
         </div>        
         <div class="link">
             <span>vip音乐免费下载</span>
