--- a/waimai/index.html
+++ b/waimai/index.html
@@ -107,7 +107,7 @@
                 <a target="_blank" class="product" href="https://m.tb.cn/h.USsxGgJ">
                     <div class="cover index-cover">
 						
-                        <img src="https://cdn.jsdelivr.net/gh/kaysarbiz/img@main/waimai/eleme2.jpg">
+                        <img src="https://kaysarbiz.gitee.io/img/waimai/eleme2.jpg">
                     </div>
                     <div class="info">
                         <div class="tags">
@@ -128,7 +128,7 @@
             <div class="product-wrap multi">
                 <a target="_blank" class="product" href="http://dpurl.cn/SRiIo8Yz">
                     <div class="cover index-cover">
-                        <img src="https://cdn.jsdelivr.net/gh/kaysarbiz/img@main/waimai/meituan1.jpg">
+                        <img src="https://kaysarbiz.gitee.io/img/waimai/meituan1.jpg">
                     </div>
                     <div class="info">
                      
