--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ var _hmt = _hmt || [];
         </div>
         <div class="link">
             <span>外卖内部卷</span>
-            <a href="http:/kaysar.top/blog/index.php/archives/4.html">马上进入</a>
+            <a href="./waimai">马上进入</a>
         </div>
         <div class="link">
             <span>1号影视</span>
