--- a/zhibo/index.html
+++ b/zhibo/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" href="https:/pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
   <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
-  <link href="css/style.css" type="text/css" rel="stylesheet">
+  <link href="../css/style.css" type="text/css" rel="stylesheet">
 <!--百度统计-->
 <script>
 var _hmt = _hmt || [];
