--- a/zhibo/index.html
+++ b/zhibo/index.html
@@ -23,9 +23,9 @@ var _hmt = _hmt || [];
 <body>
     <!--开始-->
     <div class="contnt">
-        <header class="meng">夜狼电子商务团队主页</header>
+        <header class="meng">夜狼电子商务直播主页</header>
         <div class="messageDetails">
-           <iframe  src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=23578640&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe> 
+           <iframe  style="width:100%" src="https://www.bilibili.com/blackboard/live/live-activity-player.html?cid=23578640&quality=0" frameborder="no"    framespacing="0" scrolling="no" allow="autoplay; encrypted-media" allowfullscreen="true"></iframe> 
         
         </div>
         <footer>
