--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
  <head>
 <title>夜狼电子商务</title>
-<link rel="shortcut icon" href="https:/pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
+<link rel="shortcut icon" href="//pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
   <meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
   <meta name="description" content="开发各种电子商务软件以及运营">
   <link href="css/style.css" type="text/css" rel="stylesheet">
@@ -29,20 +29,16 @@ var _hmt = _hmt || [];
                 <p>夜狼团队旗下网站入口</p>
             </div>
             <div class="link">
-               <span>团队主页</span>
-            <a href="http:/kaysar.top/">马上进入</a>  
-            </div>
-            <div class="link">
                <span>高校网课</span>
             <a href="./wk">马上进入</a>  
             </div>
                     <div class="link">
             <span>关于作者</span>
-            <a href="http:/kaysar.top/about/">马上进入</a>
+            <a href="./about/">马上进入</a>
         </div>
         <div class="link">
             <span>凯撒博客</span>
-            <a href="http:/kaysar.top/blog/">马上进入</a>
+            <a href="https://www.cnblogs.com/kaysar">马上进入</a>
         </div>
         <div class="link">
             <span>网购优惠券</span>
@@ -51,26 +47,18 @@ var _hmt = _hmt || [];
         <div class="link">
             <span>外卖内部卷</span>
             <a href="./waimai">马上进入</a>
-        </div>
-        <div class="link">
-            <span>1号影视</span>
-            <a href="http:/kaysar.top/vip/dy/">马上进入</a>
-        </div>        
+        </div>   
         <div class="link">
             <span>凯撒云盘</span>
             <a href="http:/disk.kaysar.top/">马上进入</a>
-        </div>        
-        <div class="link">
-            <span>vip音乐免费下载</span>
-            <a href="http:/kaysar.top/vip/music/">马上进入</a>
-        </div>
+        </div>         
         <div class="link">
             <span>vip电影免费观看</span>
             <a href="http:/kaysar.top/vip/v/">马上进入</a>
         </div>
         <div class="link">
             <span>vip文库导出TXT</span>
-            <a href="http:/kaysar.top/vip/wenku/">马上进入</a>
+            <a href="./vip/wenkufuzhi/">马上进入</a>
         </div>
         </div>
         <footer>
