--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ var _hmt = _hmt || [];
         </div>         
         <div class="link">
             <span>vip电影免费观看</span>
-            <a href="http:/kaysar.top/vip/v/">马上进入</a>
+            <a href="./vip/v/">马上进入</a>
         </div>
         <div class="link">
             <span>vip文库导出TXT</span>
