--- a/wk/index.html
+++ b/wk/index.html
@@ -9,23 +9,26 @@
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
 	<meta name="keywords" content="夜狼,夜狼电子商务,夜狼团队,夜狼电子商务团队">
 	<meta name="description" content="开发各种电子商务软件以及运营">
-        <link rel="stylesheet" href="css.css" type="text/css" media="all"/>
+        <link rel="stylesheet" href="./css.css" type="text/css" media="all"/>
         </head>
    <body>
        <div class="release"><div class="release-body">
            <div class="image"><img src="https://www.helloimg.com/images/2022/08/13/ZN8Zug.png" alt="凯赛尔"></div>
-           <div class="title"><h2>夜狼网课地址发布页</h2>
-           <p>请 Ctrl+D 收藏本页到浏览器收藏夹回家不迷路<br>
-           <br>
-   <b>- 点击下方按钮进入网站 -</b></p></div>
+           <div class="title"><h2>夜狼网课客服</h2>
+           <p>由于最近网站风控严重改成联系客服交单方式<br>
+			       <p> <b>QQ：1290361724</b><br>
+			         <b>WX：1290361724</b>&nbsp;</p>
+			       <p>&nbsp; <br>
+			         <b>- 点击下方按钮联系客服 -</b> </p>
+
+  </p>
+		   </div>
    <div class="release-main">
        <div class="links">
            <ul>
-    <li><a href="https://kaysar.top/wk/" target="_blank">1号入口</a></li>
-    <li><a href="https://kaysar.top/wk/mini.php" target="_blank">2号入口</a></li>
+        <li><a href="https://work.weixin.qq.com/kfid/kfc915650ecabfd6394" target="_blank">微信客服</a></li>
+    <li><a href="https://qm.qq.com/cgi-bin/qm/qr?k=EkqT4UaaYa1DPT9dCOZkJSbLFfAs0awY&noverify=0&personal_qrcode_source=4" target="_blank">QQ客服</a></li>
     <li><a href="http://chadan.ga/" target="_blank">售后补单</a></li>
-    <li><a href="https://work.weixin.qq.com/kfid/kfc915650ecabfd6394" target="_blank">微信客服</a></li>
-    <li><a href="http://wpa.qq.com/msgrd?v=3&uin=1290361724&site=qq&menu=yes" target="_blank">QQ客服</a></li>
 	<li><a href="https://jq.qq.com/?_wv=1027&k=R7OKeoxa" target="_blank">QQ群&nbsp;</a></li>
 
     </ul>
@@ -34,7 +37,10 @@
     </font>，防止失联！</font></p>
     <p>
         <b>网站域名经常更新，防止网站打不开</b><br>
-        <b>请务必收藏此网页，永久有效！</b></p></div></div></div>
+        <b>请务必收藏此网页，永久有效！</b></p>
+	   </div>
+		   </div>
+		   </div>
         <footer><h2>请把本站添加到书签</h2>
         <p class="footer">© 2023 . All Rights Reserved</p>
         </footer>
