--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -33,11 +33,11 @@
                 <span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！ 
 </span> 
     <div align="center" >
-        <a  href="http://gwzs.haotquan.com/" > <img src="https://disk.kaysar.top/d/cdn/img/waimai/eleme2.jpg"</a>
+        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"</a>
     </div>
     <div class="language">
       <a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank" >解析使用教程</a>
-      <a class="btn2 btn-outline2" href="http://gwzs.haotquan.com" rel="nofollow" target="_blank" >网购优惠券</a>
+      <a class="btn2 btn-outline2" href="http://ijhif.yhzu.cn/" rel="nofollow" target="_blank" >网购优惠券</a>
             <a class="btn2 btn-outline2" href="./uy.html" rel="nofollow" target="_blank" >ئۇيغۇرچە</a>
 	<div class="col-md-14 column">
     <div class="panel panel-default">
