--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -42,7 +42,7 @@
 	<div class="col-md-14 column">
     <div class="panel panel-default">
      <div id="kj" class="panel-body" >
-     <iframe src="" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
+     <iframe src="https://okjx.cc/include/loding/mp4.php" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
      </div>
     </div>
 <script>
@@ -73,12 +73,11 @@
    </div>
      <div class="unit-100">
     <div class="language">
-        <a class="btn2 btn-outline2" href="http://2.kaysar.top:520/" rel="nofollow" target="_blank">电影网</a>
        		
        <br>
 	
 	 <div align="center" >
-                     <img src="https://pic.imgdb.cn/item/6153ff312ab3f51d9105fdf3.png" width="300" >
+                     <img src="https://kaysarbiz.gitee.io/img/paycode/123.png" width="300" >
      </div>
 		  
   </div>
