--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -43,7 +43,7 @@
                 <span style="color: #7F7F7F;">دۆلىتىمىزدىكى چوڭ كىنو سۇپىسىى بولغان تىڭشۇن ئەيچىييې يوۋكۇ قاتارلىق كىنولانى ھەقسىز قىلىدۇ
 </span> 
     <p align=center>
-        <a href="http://gwzs.haotquan.com/" > <img src="https://www.helloimg.com/images/2022/01/30/G8QqwM.png"></a>
+        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"></a>
     </p>
     <p align=center>
       <a class="btn2 btn-outline2 uy" href="./jiaocheng.html" rel="nofollow" target="_blank" >ئىشلىتىش قوللانمىسى</a>
@@ -52,7 +52,7 @@
 	<div class="col-md-14 column">
     <div class="panel panel-default">
      <div id="kj" class="panel-body" >
-     <iframe src="https://pic.imgdb.cn/item/61542e782ab3f51d913d78ae.jpg" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
+     <iframe src="https://okjx.cc/include/loding/mp4.php" type="video/mp4" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
      </div>
     </div>
 <script>
@@ -83,13 +83,12 @@
    </div>
      <div class="unit-100">
     <div class="language">
-        <a class="btn2 btn-outline2" href="http://124.222.6.169/vip/dy/" rel="nofollow" target="_blank">كىنوخانا</a>
        		
        <br>
 	
 	<p>قوللاپ قويۇڭ رەھمەت</p>
 	 <div >
-                     <img src="https://pic.imgdb.cn/item/6153ff312ab3f51d9105fdf3.png" width="300" >
+                     <img src="https://kaysarbiz.gitee.io/img/paycode/123.png"" width="300" >
      </div>
 		  
   </div>
