--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -33,7 +33,7 @@
                 <span style="color: #7F7F7F;">免费全网VIP视频vip会员免广告看电影！亲们如果觉得好用，请帮我们传播！ 若播放异常，刷新，更换接口尝试哦！ 
 </span> 
     <div align="center" >
-        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"</a>
+        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"></a>
     </div>
     <div class="language">
       <a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank" >解析使用教程</a>
@@ -42,7 +42,7 @@
 	<div class="col-md-14 column">
     <div class="panel panel-default">
      <div id="kj" class="panel-body" >
-     <iframe src="https://okjx.cc/include/loding/mp4.php" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
+     <iframe src="https://okjx.cc/include/loding/mp4.php" type="video/mp4" style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
      </div>
     </div>
 <script>
