--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -6,10 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>1号影视-电影解析全民解析-vip视频在线解析-永久免费-电影解析</title>
 	<link rel="shortcut icon" href="https://pic.imgdb.cn/item/6153f40b2ab3f51d91f5ccfe.png">
-	<meta name="keywords"
-		content="虾搞影视vip视频解析,vip视频在线解析,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
-	<meta name="description"
-		content="全民解析VIP视频免费看，在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，芒果vip解析方便广大用户VIP视频服务，最新电影最新电视剧在线免费观看">
+	<meta name="keywords" content="kaysarbiz,vip解析,万能vip视频解析,vip视频全能解析,vip视频,手机vip视频解析,手机在线解析vip视频,优酷vip解析,爱奇艺vip解析,腾讯vip解析,乐视vip解析,芒果vip解析">
+	<meta name="description" content="在线解析，vip视频解析，优酷vip解析，爱奇艺vip解析，腾讯vip解析，乐视vip解析，">
 	<link href="css/bootstrap.min.css" rel="stylesheet" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -51,9 +49,7 @@
 				<div class="col-md-14 column">
 					<div class="panel panel-default">
 						<div id="kj" class="panel-body">
-							<iframe src="https://okjx.cc/include/loding/mp4.php" type="video/mp4"
-								style="background-color: black;" id="player" width="100%" height="300px"
-								allowTransparency="true" allowfullscreen="true" frameborder="0" scrolling="no"></iframe>
+							<iframe src="https://www.helloimg.com/images/2023/04/26/oqB5xD.png" id="player" frameborder="0" border="0" marginwidth="0" marginheight="0" allowfullscreen="true" scrolling="no" onload="this.height=this.contentWindow.document.documentElement.scrollHeight></iframe>
 						</div>
 					</div>
 					<script>
