--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -49,7 +49,7 @@
 				<div class="col-md-14 column">
 					<div class="panel panel-default">
 						<div id="kj" class="panel-body">
-							<iframe src="https://www.helloimg.com/images/2023/04/26/oqB5xD.png" id="player" frameborder="0" border="0" marginwidth="0" marginheight="0" allowfullscreen="true" scrolling="no" onload="this.height=this.contentWindow.document.documentElement.scrollHeight></iframe>
+							<iframe src="./1.html" id="player" frameborder="0" border="0" marginwidth="0" marginheight="0" allowfullscreen="true" scrolling="no" onload="this.height=this.contentWindow.document.documentElement.scrollHeight></iframe>
 						</div>
 					</div>
 					<script>
