--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -49,7 +49,7 @@
 				<div class="col-md-14 column">
 					<div class="panel panel-default">
 						<div id="kj" class="panel-body">
-							<iframe src="./1.html" id="player" frameborder="0" border="0" marginwidth="0" marginheight="0" allowfullscreen="true" scrolling="no" onload="this.height=this.contentWindow.document.documentElement.scrollHeight"></iframe>
+							<iframe src="./1.html"  style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>
 						</div>
 					</div>
 					<script>
