--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -53,7 +53,7 @@
 	<div class="col-md-14 column">
     <div class="panel panel-default">
      <div id="kj" class="panel-body" >
-     <iframe src="https://www.helloimg.com/images/2023/04/26/oqB5xD.png"  style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
+     <iframe src="1.html"  style="background-color: black;" id="player"width="100%"height="300px"allowTransparency="true"allowfullscreen="true"frameborder="0"scrolling="no"></iframe>	 
      </div>
     </div>
 <script>
