--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -40,7 +40,7 @@
 				</span>
 			<div align="center">
 				<a href="https://kaysarbiz.gitee.io/waimai/"> <img
-						src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"></a>
+						src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
 			</div>
 			<div class="language">
 				<a class="btn2 btn-outline2" href="./jiaocheng.html" rel="nofollow" target="_blank">解析使用教程</a>
