--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -44,7 +44,7 @@
                 <span style="color: #7F7F7F;">دۆلىتىمىزدىكى چوڭ كىنو سۇپىسىى بولغان تىڭشۇن ئەيچىييې يوۋكۇ قاتارلىق كىنولانى ھەقسىز قىلىدۇ
 </span> 
     <p align=center>
-        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png"></a>
+        <a  href="https://kaysarbiz.gitee.io/waimai/" > <img src="https://www.helloimg.com/images/2023/04/24/oeNBZv.png" width="300"></a>
     </p>
     <p align=center>
       <a class="btn2 btn-outline2 uy" href="./jiaocheng.html" rel="nofollow" target="_blank" >ئىشلىتىش قوللانمىسى</a>
