--- a/vip/v/index.html
+++ b/vip/v/index.html
@@ -64,9 +64,9 @@
 						<span class="input-group-addon input-lg" style="width: 80px; ">选择接口</span>
 						<select class="form-control input-lg" id="jk">
 
-							<option value="http://www.pangujiexi.com/pangu/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用
+							<option value="https://jx.jsonplayer.com/player/?url=" selected="">通用vip引擎系统【稳定通用】- 推荐使用
 							</option>
-							<option value="https://okjx.cc/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
+							<option value="https://jx.xmflv.com/?url=" selected="">备用vip引擎系统【稳定通用】- 推荐使用</option>
 
 
 
