--- a/vip/v/uy.html
+++ b/vip/v/uy.html
@@ -67,8 +67,8 @@
       <span class="input-group-addon input-lg" style="width: 80px; ">ئۇلاش ئىغىزى</span>
       <select class="form-control input-lg" id="jk">
 
-	  <option value="http://www.pangujiexi.com/pangu/?url=" selected="">ئورتاق ئىشلىتىلىندىغان ئىغىز</option>
-	  <option value="https://okjx.cc/?url=" selected="">قوشۇمچە يىشىش ئىغىزى</option>
+	  <option value="https://jx.jsonplayer.com/player/?url=" selected="">ئورتاق ئىشلىتىلىندىغان ئىغىز</option>
+	  <option value="https://jx.xmflv.com/?url=" selected="">قوشۇمچە يىشىش ئىغىزى</option>
 
 	  
      
